--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,7 @@ body {
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
   width: 1.5rem;
-  
+  height: 1.5rem;
   
 }
 /*
@@ -159,7 +159,7 @@ li:hover {
 }
 
 .checkbox {
-  opacity: 0;
+  opacity: 100;
 }
 
 .greyed-out {
