--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,19 @@ body {
 }
 
 .container {
-  max-width: 300px;
+  max-width: 400px;
   margin: 0 auto;
   padding: 20px;
   border: 2px solid #333652;
   border-radius: 10px;
   /*background-color: #F9F9F9;*/
   background-color: #E9EAEC;
+}
+
+@media only screen and (max-width: 550px) {
+  .container {
+    max-width: 90%;
+  }
 }
 
 .form-wrapper {
@@ -56,6 +62,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
 .todo-list li {
@@ -68,6 +75,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 90%;
+  min-width: 350px;
 }
 
 
