--- a/src/components/TodoList/TodoList.modules.scss
+++ b/src/components/TodoList/TodoList.modules.scss
@@ -12,47 +12,139 @@
     list-style: none;
     padding-left: 0;
 
+    &__btn-container {
+      display: flex;
+      justify-content: space-between;
+      gap: 5px;
+
+      
+    }
+
     &__item {
-      color: #F9F9F9;
+      color: #F9F8F8;
       min-width: 250px;
       transition: all .5s ease-in-out;
       text-align: left;
       margin-bottom: 5px;
       padding: 5px;
       display: flex;
-      align-items: center;
+      /*align-items: center;*/
       justify-content: space-between;
+      border-radius: 5px;
+
+
+      /* for custom checkbox */
+      
+      &__input-container {
+        display: flex;
+        position: relative;
+        padding-left: 32px;
+        margin-bottom: 0px;
+        margin-top: 1px;
+        cursor: pointer;
+        font-size: 22px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+
+        &__checkbox {
+          position: absolute;
+          opacity: 0;
+          cursor: pointer;
+          height: 0;
+          width: 0;
+        }
+  
+        &__checkbox:checked ~ &__checkmark {
+          background-color: #7ff5a6;
+        }
+  
+        &__checkbox:checked ~ &__checkmark::after {
+          display: block;
+        }
+  
+        &__checkmark {
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 20px;
+          width: 20px;
+          background-color: #eee;
+          border-radius: 50px;
+          margin-top: 3px;
+        }
+  
+        &__checkmark::after {
+          content: "";
+          position: absolute;
+          display: none;
+          left: 11px;
+          top: -4px;
+          width: 5px;
+          height: 16px;
+          border: solid white;
+          border-width: 0 3px 3px 0;
+          -webkit-transform: rotate(60deg);
+          -ms-transform: rotate(60deg);
+          transform: rotate(50deg);
+        }
+
+        &:hover input ~ &__checkmark {
+          background-color: #ccc;
+        }
+      }
+      
+      
+      /* for custom checkbox */
 
       &.done{
         text-decoration: line-through;
         background-color: grey !important;
+        font-size: smaller !important;
+        font-weight: lighter;
       }
 
       &:hover {
         background-color: var(--color-two);
         cursor: pointer;
         transform: scale(1.1);
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       }
 
       &:nth-child(even) {
-        background-color: var(--color-four);
+        background-color: #4D413A;
       }
 
       &:nth-child(odd) {
-        background-color: var(--color-three);
+        background-color: #4D413A;
       }
 
       &__del-btn {
         padding: none;
         border: none;
         border-radius: 5px;
-        background-color: #e01212;
+        background: inherit;
+        color: #e77575;
+        font-size: 12px;
+        cursor: pointer;
+        transition: background-color 0.3s ease-in-out;
+        width: 1.5rem;
+        height: 1.5rem;
+      }
+
+      &__edit-btn {
+        padding: none;
+        border: none;
+        border-radius: 5px;
+        background: inherit;
         color: #fff;
         font-size: 12px;
         cursor: pointer;
         transition: background-color 0.3s ease-in-out;
         width: 1.5rem;
         height: 1.5rem;
+
       }
     }
   }
