--- a/src/App.modules.scss
+++ b/src/App.modules.scss
@@ -8,6 +8,9 @@
 }
 
 .app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   max-width: 400px;
   min-height: 40rem;
   margin: 0 auto;
