added stats at the bottom

--- a/src/components/TodoList/TodoList.modules.scss
+++ b/src/components/TodoList/TodoList.modules.scss
@@ -115,11 +115,12 @@
       }
 
       &:nth-child(even) {
-        background-color: #4D413A;
+        background-color: #4d413ac5;
+        
       }
 
       &:nth-child(odd) {
-        background-color: #4D413A;
+        background-color: #4d413ac5;
       }
 
       &__del-btn {
