--- a/src/components/ListStats/ListStats.modules.scss
+++ b/src/components/ListStats/ListStats.modules.scss
@@ -1,13 +1,13 @@
-.list-container {
+.stat-container {
     /*background-color: rgb(77 65 58 / 32%);*/
-    background-color: #c87d87f2;
+    background-color: var(--defaultBg);
     border-radius: 10px;
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     min-height: 3.5rem;
-    color: #F9F8F8;
+    color: var(--textColor);
     max-width: 20rem;
 
     &__stats {
