changed theme basic button to toggle button

--- a/src/components/ButtonToggler/ButtonToggler.modules.scss
+++ b/src/components/ButtonToggler/ButtonToggler.modules.scss
@@ -1,3 +1,56 @@
 .button-container {
-    display: flex;
+    /* The switch - the box around the slider */
+
+    &__switch {
+        position: relative;
+        display: inline-block;
+        width: 2.3rem;
+        height: 1.2rem;
+        /* Hide default HTML checkbox */
+        &__checkbox {
+            opacity: 0;
+            width: 0;
+            height: 0;
+            
+            /* The slider */
+            &__slider-round {
+                position: absolute;
+                cursor: pointer;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background-color: #ccc;
+                -webkit-transition: .4s;
+                transition: .4s;
+                border-radius: 34px;
+
+                &::before {
+                    content: "";
+                    height: inherit;
+                    width: 26px;
+                    left: 4px;
+                    bottom: 4px;
+                    background-color: white;
+                    border-radius: 50%;
+                }
+            }
+
+
+            &:checked + &__slider-round {
+                background-color: #18be7f;
+            }
+
+            &:focus + &__slider-round {
+                box-shadow: 0 0 1px #2196F3;
+            }
+
+            &:checked + &__slider-round::before {
+                -webkit-transform: translateX(26px);
+                -ms-transform: translateX(26px);
+                transform: translateX(26px);
+            }
+        }
+        
+    }
 }
