changed the size of the toggle box

--- a/src/App.modules.scss
+++ b/src/App.modules.scss
@@ -27,6 +27,7 @@
     width: 100%;
     background-color: var(--defaultBg);
     margin: -15px;
+    margin-right: -46px;
     justify-content: flex-end;
     color: var(--textColor);
   }
