--- a/src/components/ButtonToggler/ButtonToggler.modules.scss
+++ b/src/components/ButtonToggler/ButtonToggler.modules.scss
@@ -1,8 +1,9 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 44px;
+  height: 20px;
+  
 
   & > input {
     opacity: 0;
@@ -29,7 +30,7 @@
     cursor: pointer;
     top: 0;
     left: 0;
-    right: 0;
+    right: 0px;
     bottom: 0;
     background-color: #ccc;
     -webkit-transition: .4s;
@@ -38,10 +39,10 @@
     &:before {
       position: absolute;
       content: "";
-      height: 26px;
-      width: 26px;
-      left: 4px;
-      bottom: 4px;
+      height: 16px;
+      width: 18px;
+      left: 1px;
+      bottom: 2px;
       background-color: white;
       -webkit-transition: .4s;
       transition: .4s;
