--- a/src/App.modules.scss
+++ b/src/App.modules.scss
@@ -12,15 +12,23 @@
   flex-direction: column;
   align-items: center;
   max-width: 400px;
-  min-height: 40rem;
+  min-height: 42rem;
   margin: 0 auto;
   padding: 20px;
   /* border: 2px solid #333652; */
   border-radius: 10px;
   /*background-color: #F9F8F8;*/
-  background-color: var(--defaultBg);
-  
+  background-color: var(--defaultBg);  
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+  &__header {
+    background-color: #ad9ea0;
+    width: 100% ;
+    margin: 0;
+    padding: 0;
+    height: 5.5rem;
+    border-radius: 10px;
+  }
 
   &__toggler {
     display: flex;
