--- a/src/components/Weather/Weather.modules.scss
+++ b/src/components/Weather/Weather.modules.scss
@@ -6,10 +6,14 @@
     &__temp {
         font-size: 2.2rem;
         display: flex;
-        gap: 0.3rem;
+        /*gap: 0.09rem;*/
 
-        &span {
-            margin-left: 1rem;
+        &__sign {
+            margin-left: 0.25rem;
+        }
+
+        &__celcius {
+            font-weight: bold;
         }
     }
     
