put an icon to the weather section

--- a/src/App.modules.scss
+++ b/src/App.modules.scss
@@ -20,7 +20,7 @@
   /*background-color: #F9F8F8;*/
   background-color: var(--defaultBg);  
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
+  /*
   &__header {
     background-color: #ad9ea0;
     width: 100% ;
@@ -28,8 +28,10 @@
     padding: 0;
     height: 5.5rem;
     border-radius: 10px;
+    display: flex;
+    flex-direction: row;
   }
-
+  */
   &__toggler {
     display: flex;
     width: 100%;
