--- a/src/components/Weather/Weather.modules.scss
+++ b/src/components/Weather/Weather.modules.scss
@@ -1,20 +1,36 @@
-.container {
-    color: whitesmoke;
-    margin-left: 0.5rem;
-    margin-top: 0.2rem;
-
-    &__temp {
-        font-size: 2.2rem;
-        display: flex;
-        /*gap: 0.09rem;*/
-
-        &__sign {
-            margin-left: 0.25rem;
-        }
-
-        &__celcius {
-            font-weight: bold;
-        }
-    }
+.header{
+    background-color: #ad9ea0;
+    width: 100% ;
+    margin: 0;
+    padding: 0;
+    height: 5.5rem;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     
+    &__container {
+        color: whitesmoke;
+        margin-left: 0.5rem;
+        margin-top: 0.2rem;
+    
+        &__temp {
+            font-size: 2.2rem;
+            display: flex;
+            /*gap: 0.09rem;*/
+    
+            &__sign {
+                margin-left: 0.25rem;
+            }
+    
+            &__celcius {
+                font-weight: bold;
+            }
+        }
+        
+    }
+
+    &__icon {
+        font-size: 1rem;
+    }
 }
