--- a/src/components/Weather/Weather.modules.scss
+++ b/src/components/Weather/Weather.modules.scss
@@ -1,5 +1,5 @@
 .header{
-    background-color: #ad9ea0;
+    background-color: #ad9ea0bb;
     width: 100% ;
     margin: 0;
     padding: 0;
@@ -8,11 +8,15 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    backdrop-filter: blur(5px);
+    font-size: 0.7rem;
+    z-index: 1;
     
     &__container {
-        color: whitesmoke;
+        /*color: whitesmoke;*/
+        color: var(--textColor);
         margin-left: 0.5rem;
-        margin-top: 0.2rem;
+        margin-top: 0.5rem;
     
         &__temp {
             font-size: 2.2rem;
