added tooltips to delete and edit buttons

--- a/src/components/TodoList/TodoList.modules.scss
+++ b/src/components/TodoList/TodoList.modules.scss
@@ -142,6 +142,36 @@
         transition: background-color 0.3s ease-in-out;
         width: 1.5rem;
         height: 1.5rem;
+
+        &:hover > &__tooltip{
+          visibility: visible;
+        }
+
+        &__tooltip {
+          visibility: hidden;
+          width: 70px;
+          background-color: #00000099;
+          color: #fff;
+          text-align: center;
+          border-radius: 6px;
+          padding: 5px 0;
+          position: absolute;
+          z-index: 1;
+          bottom: 100%;
+          left: 102.6%;
+          margin-left: -60px;
+          
+          &::after {
+            content: "";
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            margin-left: -5px;
+            border-width: 5px;
+            border-style: solid;
+            border-color: black transparent transparent transparent;
+          }
+        }
       }
 
       &__edit-btn {
@@ -155,6 +185,36 @@
         transition: background-color 0.3s ease-in-out;
         width: 1.5rem;
         height: 1.5rem;
+
+        &:hover > &__tooltip{
+          visibility: visible;
+        }
+
+        &__tooltip {
+          visibility: hidden;
+          width: 70px;
+          background-color: #00000099;
+          color: #fff;
+          text-align: center;
+          border-radius: 6px;
+          padding: 5px 0;
+          position: absolute;
+          z-index: 1;
+          bottom: 100%;
+          left: 93%;
+          margin-left: -60px;
+          
+          &::after {
+            content: "";
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            margin-left: -5px;
+            border-width: 5px;
+            border-style: solid;
+            border-color: black transparent transparent transparent;
+          }
+        }
 
       }
     }
